--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,73 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+    height: 100%;
+}
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    background-color: #fafafa ;
+}
+
+.c-p {
+    cursor: pointer;
+}
+
+.image-list-item-container {
+    position: relative;
+    width: 100%;
+}
+
+.image {
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: 0.5s ease;
+    backface-visibility: hidden;
+}
+
+.image-list-item-actions {
+    transition: 0.5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.image-list-item-container:hover .image {
+    opacity: 0.3;
+}
+
+.image-list-item-container:hover .image-list-item-actions {
+    opacity: 1;
+}
+
+.text {
+    background-color: #4caf50;
+    color: white;
+    font-size: 16px;
+    padding: 16px 32px;
+}
+
+.cover {
+    object-fit: cover; /*this makes the image in src fit to the size specified below*/
+    width: 100%; /* Here you can use wherever you want to specify the width and also the height of the <img>*/
+    height: 100%;
+}
+
+.form-wrapper {
+    min-width: 150px;
+    max-width: 500px;
+    margin: 50px auto;
+    padding: 0 30px;
+}
+
+.form-full-width {
+    width: 100%;
+}
+
